--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,9 @@
     }
   ],
   "require": {
-    "wanphp/installers": "*",
-    "wanphp/libray-mysql": "^1.0.0",
-    "wanphp/components-category": "^1.0.0",
-    "php-di/php-di": "^6.3",
-    "slim/psr7": "^1.3",
-    "slim/slim": "^4.7"
+    "wanphp/installers": "^1.0.0",
+    "wanphp/libray-slim": "^1.0.0",
+    "wanphp/components-category": "^1.1.0"
   },
   "require-dev": {
     "zircote/swagger-php": "^3.1"
@@ -34,7 +31,8 @@
   "repositories": {
     "packagist": {
       "type": "composer",
-      "url": "https://mirrors.aliyun.com/composer/"
+      "url": "https://mirrors.aliyun.com/composer/",
+      "canonical": false
     }
   }
 }
